[gd_scene load_steps=9 format=3 uid="uid://cv1ytr5mbabfm"]

[ext_resource type="Texture2D" uid="uid://bt87st5yo841i" path="res://assets/graphical_assets/parallax/color.tga" id="1_qmp1g"]
[ext_resource type="Script" path="res://components/score_screen/scripts/ScoreScreen.gd" id="1_si3ca"]
[ext_resource type="Script" path="res://scenes/title_screen/scripts/RichTextLabelTextFlash.gd" id="2_nognv"]
[ext_resource type="Shader" path="res://assets/graphical_assets/styles/background.gdshader" id="3_gjiav"]
[ext_resource type="Texture2D" uid="uid://d0rks0rtd03xr" path="res://assets/graphical_assets/environments/backgrounds/Pallette/04.png" id="4_gxnjt"]
[ext_resource type="Theme" uid="uid://cv4w4ffaby5el" path="res://assets/graphical_assets/styles/button_main.tres" id="4_kh5ik"]
[ext_resource type="Texture2D" uid="uid://m6ow78pjvk2" path="res://assets/graphical_assets/environments/backgrounds/BW/lines01.png" id="5_4x6tr"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_r4g8y"]
shader = ExtResource("3_gjiav")
shader_parameter/snes_transparency = false
shader_parameter/gba_transparency = false
shader_parameter/horizontal_scan_line = false
shader_parameter/vertical_scan_line = false
shader_parameter/enable_palette_cycling = true
shader_parameter/sprite_scroll_direction = Vector2(1, 1)
shader_parameter/sprite_scroll_speed = 0.01
shader_parameter/gba_transparency_scroll_direction = Vector2(0, 0)
shader_parameter/gba_transparency_scroll_speed = 0.01
shader_parameter/gba_transparency_value = 0.5
shader_parameter/horizontal_wave_amplitude = 2.0
shader_parameter/horizontal_wave_frequency = 2.0
shader_parameter/horizontal_wave_speed = 0.1
shader_parameter/vertical_wave_amplitude = 0.5
shader_parameter/vertical_wave_frequency = 1.0
shader_parameter/vertical_wave_speed = 0.1
shader_parameter/horizontal_deform_amplitude = 0.2
shader_parameter/horizontal_deform_frequency = 2.0
shader_parameter/horizontal_deform_speed = 0.1
shader_parameter/vertical_deform_amplitude = 0.4
shader_parameter/vertical_deform_frequency = 2.0
shader_parameter/vertical_deform_speed = 0.1
shader_parameter/width = 1024.0
shader_parameter/height = 576.0
shader_parameter/palette_cycling_speed = 0.001
shader_parameter/palette = ExtResource("4_gxnjt")

[node name="ScoreScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_si3ca")

[node name="BackgroundTextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_qmp1g")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_r4g8y")
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_4x6tr")
stretch_mode = 1

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("1_qmp1g")
metadata/_edit_use_anchors_ = true

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.226563
anchor_top = 0.142361
anchor_right = 0.771485
anchor_bottom = 0.246528
theme_override_colors/font_color = Color(1, 1, 0.0235294, 1)
theme_override_colors/font_shadow_color = Color(1.73271e-06, 0.596233, 0.314869, 1)
theme_override_constants/shadow_offset_x = 8
theme_override_constants/shadow_offset_y = 8
theme_override_font_sizes/font_size = 48
text = "Tu puntaje final es"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="ScoreLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.390625
anchor_top = 0.364583
anchor_right = 0.609376
anchor_bottom = 0.447916
theme_override_colors/default_color = Color(0, 0.862745, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 3
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "[center]00000000[/center]"
script = ExtResource("2_nognv")
speed = 2.0
delay = 1.0
fade = true
metadata/_edit_use_anchors_ = true

[node name="RestartBtn" type="Button" parent="."]
custom_minimum_size = Vector2(0, 50)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.351563
anchor_top = 0.571181
anchor_right = 0.65
anchor_bottom = 0.689347
offset_right = 0.399963
offset_bottom = -0.0640259
theme = ExtResource("4_kh5ik")
text = "Reiniciar"
metadata/_edit_use_anchors_ = true

[node name="ReturnBtn" type="Button" parent="."]
custom_minimum_size = Vector2(0, 50)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.351563
anchor_top = 0.717014
anchor_right = 0.650391
anchor_bottom = 0.83507
theme = ExtResource("4_kh5ik")
text = "Regresar al men√∫ principal"
metadata/_edit_use_anchors_ = true

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="RestartBtn" to="." method="_on_restart_btn_pressed"]
[connection signal="pressed" from="ReturnBtn" to="." method="_on_return_btn_pressed"]
